# proofservice-lpr-printer

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  Manifest  README.md  UPGRADE.md  labelprinterhandler.cpp  labelprinterhandler.h  labelprinterrestserver.cpp  labelprinterrestserver.h  lprprinterhandler.cpp  lprprinterhandler.h  lprprinterrestserver.cpp  lprprinterrestserver.h  main.cpp  proofservice-label-printer.pro  proofservice-lpr-printer.pro  proofservice_label_printer_global.h  proofservice_lpr_printer_global.h
